# py-ml-dev

./: .gitignore  pyproject.toml
mlruns/0/: meta.yaml
py_ml_dev/ir/collab_filter/: main.py
py_ml_dev/ir/match_clothing_items/: peec_11_02_2026.ipynb  peec_11_02_2026_vec_self_practice.ipynb  peec_qdrant_hybrid_search.ipynb
py_ml_dev/leet_code/: practice.py  test.ipynb
py_ml_dev/ml6/case_1_clustering/: config.yaml  predict_sensor_clusters.py  run_sensor_exploration.py
py_ml_dev/ml6/case_1_clustering/notebooks/: sensor_exploration.ipynb  sensor_exploration_refactored_v1.ipynb
py_ml_dev/ml6/case_2_video_processing/: football_exploration.ipynb
py_ml_dev/nlp/: text_classification.py
py_ml_dev/previous/reddit_live/: data.json  live-coding.ipynb
py_ml_dev/revolut/: live_coding.ipynb
py_ml_dev/torch_template/: main.py
py_ml_dev/utils/: utils.py
